# AIkefu

./: README.md  pyproject.toml
docs/: 00-repo-policy.md  10-thesis-positioning.md  20-literature-matrix.md  30-architecture-and-modules.md  40-data-and-eval-spec.md  50-reproduction-and-experiment-plan.md  60-module-handoffs.md  README.md  references.bib
docs/00-repo-policy/: 01-branch-and-review.md  02-code-admission.md  03-governance-principles.md  04-branch-lifecycle.md  05-review-checklist.md  06-artifacts-and-results.md  07-deprecation-and-cleanup.md  08-naming-and-structure.md  README.md
docs/10-thesis-positioning/: 01-problem-and-scope.md  02-questions-and-contributions.md  03-boundaries-and-roadmap.md  README.md
docs/20-literature-matrix/: 01-policy-and-process.md  02-clarification-memory-improvement.md  03-engineering-and-evals.md  README.md
docs/30-architecture/: 01-system-view.md  02-policy-clarification-gating.md  03-runtime-trace-evolution.md  README.md
docs/40-data-eval/: 01-core-objects.md  02-metrics-and-protocol.md  03-output-contracts.md  README.md
docs/50-experiments/: 01-baselines-and-cases.md  02-ablations-and-analysis.md  03-risks-and-validity.md  README.md
docs/60-handoffs/: 01-policygraph.md  02-clarification-and-gating.md  03-eval-experience-simulator.md  README.md
docs/references/: 01-literature-matrix.md  02-module-to-literature.md  03-reproduction-chain.md  04-public-assets.md  05-agent-thesis-context-pack.md  README.md  references.bib
docs/sdd/: 00-charter.md  (+6 more)
tests/: test_clarification.py  test_policy_graph.py
(+6 files in other folders)
