[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aikefu"
version = "0.1.0"
description = "Execution harness prototype for outcome-centric local-service agents"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "XtaxRich" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
